Fixed project tool icon too small on small monitors

--- a/style/myproject.css
+++ b/style/myproject.css
@@ -203,8 +203,8 @@
     }
     @media screen and (max-height: 777px) {
         .project-item .tools img{
-            width: 15px;
-            height: 15px;
+            width: 20px;
+            height: 20px;
     
             padding-bottom: 0px;
             padding-left: 5px;
